feat: add standalone gateway deployment